src/main/webapp/css/friend/friend.css
#friendsPage {
    padding-bottom: 0.5rem;
}

#my_friends {
    border-collapse: collapse;
    margin-top: 20px;
}

#my_friends th,
#my_friends td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: left;
}

#my_friends th {
    background-color: #f2f2f2;
}

#listFriend h2 {
    text-align: center;
    margin-bottom: 20px;
}

#my_friends .deleteFriendButton {
    display: block;
    background-color: #4e99e9;
    color: #fff;
    border: none;
    padding: 6px 10px;
    border-radius: 20px;
    cursor: pointer;
    margin: 0 auto;
}

#my_friends .deleteFriendButton:hover {
    transform: scale(1.05);
    background-color: #ff4d4d;
}

#addFriend{
    height: 100px;
}

#listFriend{
    padding-top: 40px;
}

#friendsTable{
    max-height: 500px;
    overflow-y: auto;
}

.playerStatus{
    display: none;
    margin-left: auto;
}

